--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.port=8080
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/casamento
-spring.datasource.username=postgres
+spring.datasource.username=janderdiniz
 spring.datasource.password=adminjf
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
@@ -15,6 +15,11 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+Access-Control-Allow-Methods: POST, GET
+Access-Control-Allow-Headers: *
+Access-Control-Max-Age: 86400
+
 # LIQUIBASE
 spring.liquibase.change-log=classpath:/liquibase-dev.xml
 # JWT
