--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 # DATASOURCE
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/casamento
+spring.datasource.url=jdbc:postgresql://200.98.74.99:5432/casamento
 spring.datasource.username=janderdiniz
 spring.datasource.password=adminjf
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -15,10 +15,6 @@ spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-Access-Control-Allow-Methods: POST, GET
-Access-Control-Allow-Headers: *
-Access-Control-Max-Age: 86400
 
 # LIQUIBASE
 spring.liquibase.change-log=classpath:/liquibase-dev.xml
