--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 # DATASOURCE
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://200.98.74.99:5432/casamento
+spring.datasource.url=jdbc:postgresql://localhost:5432/casamento
 spring.datasource.username=janderdiniz
 spring.datasource.password=adminjf
 spring.datasource.driver-class-name=org.postgresql.Driver
